[package]
name = "basic_usage"
version = "0.1.0"
edition = "2024"

[dependencies]
firewheel_network_node = { path = "../../crates/firewheel_network_node" }
simple_logger = "5.2.0"
firewheel = { git = "https://github.com/BillyDM/Firewheel", branch = "main", default-features = false, features = ["std", "log", "cpal", "sampler_node", "symphonium"] }
symphonium = { version = "0.9.2", features = ["mp3"] }
log = "0.4.29"
clap = { version = "4.6.1", features = ["derive"] }